OK, messed with vertical-align again, this time more correctly?

--- a/cs100d/module4/app_prototype/app_prototype/src/index.css
+++ b/cs100d/module4/app_prototype/app_prototype/src/index.css
@@ -32,7 +32,7 @@ body {
   width:49vw;
   margin:0px;
   padding:0px;
-
+  vertical-align:text-top;
 }
 
 .Column2{
@@ -42,5 +42,6 @@ body {
   width:49vw;
   margin:0px;
   padding:0px;
-
+  vertical-align:text-top;
+  overflow:scroll;
 }
